working bearer-token example
