# models/cart_item.go
@@ -1,0 +1,65 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// CartItem cart item
+//
+// swagger:model CartItem
+type CartItem struct {
+
+	// currency
+	Currency string `json:"currency,omitempty"`
+
+	// image Url
+	ImageURL string `json:"imageUrl,omitempty"`
+
+	// product Id
+	ProductID int64 `json:"productId,omitempty"`
+
+	// product name
+	ProductName string `json:"productName,omitempty"`
+
+	// quantity
+	Quantity int64 `json:"quantity,omitempty"`
+
+	// unit price
+	UnitPrice float64 `json:"unitPrice,omitempty"`
+}
+
+// Validate validates this cart item
+func (m *CartItem) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this cart item based on context it is used
+func (m *CartItem) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CartItem) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CartItem) UnmarshalBinary(b []byte) error {
+	var res CartItem
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
