# restapi/operations/user/delete_user_responses.go
@@ -1,84 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package user
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-)
-
-// DeleteUserOKCode is the HTTP code returned for type DeleteUserOK
-const DeleteUserOKCode int = 200
-
-/*DeleteUserOK User deleted
-
-swagger:response deleteUserOK
-*/
-type DeleteUserOK struct {
-}
-
-// NewDeleteUserOK creates DeleteUserOK with default headers values
-func NewDeleteUserOK() *DeleteUserOK {
-
-	return &DeleteUserOK{}
-}
-
-// WriteResponse to the client
-func (o *DeleteUserOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(200)
-}
-
-// DeleteUserBadRequestCode is the HTTP code returned for type DeleteUserBadRequest
-const DeleteUserBadRequestCode int = 400
-
-/*DeleteUserBadRequest Invalid username supplied
-
-swagger:response deleteUserBadRequest
-*/
-type DeleteUserBadRequest struct {
-}
-
-// NewDeleteUserBadRequest creates DeleteUserBadRequest with default headers values
-func NewDeleteUserBadRequest() *DeleteUserBadRequest {
-
-	return &DeleteUserBadRequest{}
-}
-
-// WriteResponse to the client
-func (o *DeleteUserBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(400)
-}
-
-// DeleteUserNotFoundCode is the HTTP code returned for type DeleteUserNotFound
-const DeleteUserNotFoundCode int = 404
-
-/*DeleteUserNotFound User not found
-
-swagger:response deleteUserNotFound
-*/
-type DeleteUserNotFound struct {
-}
-
-// NewDeleteUserNotFound creates DeleteUserNotFound with default headers values
-func NewDeleteUserNotFound() *DeleteUserNotFound {
-
-	return &DeleteUserNotFound{}
-}
-
-// WriteResponse to the client
-func (o *DeleteUserNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(404)
-}
