# restapi/operations/user/get_cart_responses.go
@@ -1,0 +1,151 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package user
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"go-openapi/models"
+)
+
+// GetCartOKCode is the HTTP code returned for type GetCartOK
+const GetCartOKCode int = 200
+
+/*GetCartOK All items in cart
+
+swagger:response getCartOK
+*/
+type GetCartOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.CartPreview `json:"body,omitempty"`
+}
+
+// NewGetCartOK creates GetCartOK with default headers values
+func NewGetCartOK() *GetCartOK {
+
+	return &GetCartOK{}
+}
+
+// WithPayload adds the payload to the get cart o k response
+func (o *GetCartOK) WithPayload(payload models.CartPreview) *GetCartOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get cart o k response
+func (o *GetCartOK) SetPayload(payload models.CartPreview) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetCartOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = models.CartPreview{}
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetCartBadRequestCode is the HTTP code returned for type GetCartBadRequest
+const GetCartBadRequestCode int = 400
+
+/*GetCartBadRequest Bad Request
+
+swagger:response getCartBadRequest
+*/
+type GetCartBadRequest struct {
+}
+
+// NewGetCartBadRequest creates GetCartBadRequest with default headers values
+func NewGetCartBadRequest() *GetCartBadRequest {
+
+	return &GetCartBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *GetCartBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// GetCartNotFoundCode is the HTTP code returned for type GetCartNotFound
+const GetCartNotFoundCode int = 404
+
+/*GetCartNotFound Item Not Found
+
+swagger:response getCartNotFound
+*/
+type GetCartNotFound struct {
+}
+
+// NewGetCartNotFound creates GetCartNotFound with default headers values
+func NewGetCartNotFound() *GetCartNotFound {
+
+	return &GetCartNotFound{}
+}
+
+// WriteResponse to the client
+func (o *GetCartNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
+
+// GetCartInternalServerErrorCode is the HTTP code returned for type GetCartInternalServerError
+const GetCartInternalServerErrorCode int = 500
+
+/*GetCartInternalServerError Server error
+
+swagger:response getCartInternalServerError
+*/
+type GetCartInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload string `json:"body,omitempty"`
+}
+
+// NewGetCartInternalServerError creates GetCartInternalServerError with default headers values
+func NewGetCartInternalServerError() *GetCartInternalServerError {
+
+	return &GetCartInternalServerError{}
+}
+
+// WithPayload adds the payload to the get cart internal server error response
+func (o *GetCartInternalServerError) WithPayload(payload string) *GetCartInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get cart internal server error response
+func (o *GetCartInternalServerError) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetCartInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
